@@ -1,3 +1,7 @@
+Console-2.0.3-beta
+=============================================================
+- Added recursive queries;
+
 Console-2.0.2-beta
 =============================================================
 - Renew appearance;
